# biovideo

./: .gitignore  CITATION.cff  LICENSE  NOTICE  pyproject.toml  readme.md
examples/: demo_generate.py  example.py
examples/data/: movie.tif  skel_stack.tif
src/biovideo/: __init__.py  anim.py  colors.py  ffmpeg_utils.py  timelapse.py
src/biovideo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
